RESOLVED FIXED30221
[GTK] fails to load media embedded in iframe element
https://bugs.webkit.org/show_bug.cgi?id=30221
Summary [GTK] fails to load media embedded in iframe element
Philippe Normand
Reported 2009-10-08 10:03:45 PDT
Something like <iframe src="path/to/media.mp4"> should internally create a <video> element, test media/video-document-types.html test that and fails on the GTK+ port.
Attachments
load standalone media embedded in iframes (3.36 KB, patch)
2009-11-10 08:15 PST, Philippe Normand
no flags
Philippe Normand
Comment 1 2009-10-20 08:48:22 PDT
media/video-click-dblckick-standalone.html uses that feature too.
Philippe Normand
Comment 2 2009-11-10 08:15:09 PST
Created attachment 42867 [details] load standalone media embedded in iframes
Xan Lopez
Comment 3 2009-11-11 00:08:14 PST
Comment on attachment 42867 [details] load standalone media embedded in iframes Makes sense.
WebKit Commit Bot
Comment 4 2009-11-11 00:37:08 PST
Comment on attachment 42867 [details] load standalone media embedded in iframes Clearing flags on attachment: 42867 Committed r50793: <http://trac.webkit.org/changeset/50793>
WebKit Commit Bot
Comment 5 2009-11-11 00:37:13 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.