2009-11-11  Philippe Normand  <pnormand@igalia.com>

Reviewed by Xan Lopez.

        https://bugs.webkit.org/show_bug.cgi?id=30221
        [GTK] fails to load media embedded in iframe element

        * platform/gtk/Skipped: Unskip fixed tests.
2009-11-11  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Xan Lopez.

        https://bugs.webkit.org/show_bug.cgi?id=30221
        [GTK] fails to load media embedded in iframe element

        The FrameLoader can show Media if the audio/video support is
        enabled at compile time.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::canShowMIMEType):

Canonical link: https://commits.webkit.org/42222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50793 268f45cc-cd09-0410-ab3c-d52691b4dbfc